tests/vrml97/good/proto-containment-trivial.wrl
#VRML V2.0 utf8
PROTO Outer0 [] { PROTO Inner [] { Group {} } Inner {} }
Outer0 {}
