tests/vrml97/bad/proto-eventout-conflict.wrl
#VRML V2.0 utf8
PROTO Node [
  exposedField MFVec3f foo []
  eventOut SFColor foo_changed
] {
  Group {}
}
Node {}
